--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ clap = { version = "4.5.21", features = ["derive"] }
 itertools = "0.13.0"
 paste = "1.0.15"
 regex = "1.11.1"
+strum = "0.26.3"
+strum_macros = "0.26.4"
